# telegram-export-sqlite

./: .gitignore  AGENTS.md  CITATION.cff  Cargo.toml  NOTICE  README.md
.github/workflows/: main.yml
src/: bundle.rs  cli.rs  db.rs  db_swap.rs  discovery.rs  error.rs  export_rows.rs  html_export.rs  importer.rs  json_parser.rs  lib.rs  llm_export.rs  main.rs  media_copy.rs  media_path.rs  merge.rs  model.rs  output_dir.rs  parser.rs  reactions.rs  service.rs  text.rs  time.rs
src/html_export/: assets.rs  render.rs
src/llm_export/: render.rs  transcribe.rs
tests/: integration_import.rs
tests/fixtures/basic_export/chat_001/: messages.html  messages2.html
tests/fixtures/json_export/: result.json
tests/fixtures/tdesktop_media/chat_001/: messages.html
tests/fixtures/voice_export/: result.json
