[package]
name = "telegram-export-sqlite"
version = "1.0.0"
edition = "2024"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive"] }
ego-tree = "0.11"
mime_guess = "2"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
